--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                             <form id="login-form">
                                 <div class="mb-3">
                                     <label for="login-email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="login-email" required>
+                                    <input type="email" class="form-control" id="login-email">
                                 </div>
                                 <div class="mb-3 password-container">
                                     <label for="login-password" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="login-password" required>
+                                    <input type="password" class="form-control" id="login-password">
                                     <i class="bi bi-eye-slash password-toggle" id="toggle-login-password"></i>
                                 </div>
                                 <button type="submit" class="btn btn-primary w-100">Entrar</button>
@@ -97,11 +97,11 @@
                             <form id="register-form">
                                 <div class="mb-3">
                                     <label for="register-email" class="form-label">Email Corporativo (@ssib.es)</label>
-                                    <input type="email" class="form-control" id="register-email" required>
+                                    <input type="email" class="form-control" id="register-email">
                                 </div>
                                 <div class="mb-3 password-container">
                                     <label for="register-password" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="register-password" required>
+                                    <input type="password" class="form-control" id="register-password">
                                      <i class="bi bi-eye-slash password-toggle" id="toggle-register-password"></i>
                                 </div>
                                 <div id="password-rules" class="form-text mb-3">
@@ -142,7 +142,7 @@
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h3>Pacientes de la Guardia</h3>
                     <div>
-                        <button id="export-pdf-btn" class="btn btn-success"><i class="bi bi-file-earmark-pdf"></i> Exportar a PDF</button>
+                        <button id="export-pdf-btn" class="btn btn-dark"><i class="bi bi-file-earmark-pdf"></i> Exportar a PDF</button>
                         <button id="add-patient-btn" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Añadir Paciente</button>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
             <section class="summary-card p-4 rounded">
                 <div class="d-flex justify-content-between align-items-center">
                     <h3>Resumen de la Guardia</h3>
-                    <button id="refresh-summary-btn" class="btn btn-sm btn-outline-secondary"><i class="bi bi-arrow-clockwise"></i> Actualizar</button>
+                    <button id="refresh-summary-btn" class="btn btn-sm btn-outline-secondary"><i class="bi bi-arrow-clockwise"></i> Actualizar Totales</button>
                 </div>
                 <div id="summary" class="row mt-3">
                     <div class="col-md-3"><strong>Total Pacientes:</strong> <span id="total-patients">0</span></div>
@@ -201,17 +201,17 @@
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <label for="nombre" class="form-label">Nombre y Apellidos</label>
-                                <input type="text" id="nombre" class="form-control" required>
+                                <input type="text" id="nombre" class="form-control">
                             </div>
                         </div>
                         <div class="row">
                              <div class="col-md-6 mb-3">
                                 <label for="diagnostico" class="form-label">Diagnóstico</label>
-                                <input type="text" id="diagnostico" class="form-control" required>
+                                <input type="text" id="diagnostico" class="form-control">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="tratamiento" class="form-label">Tratamiento</label>
-                                <select id="tratamiento" class="form-select" required>
+                                <select id="tratamiento" class="form-select">
                                     <option value="Médico">Médico</option>
                                     <option value="IQ Local">IQ Local</option>
                                     <option value="IQ General">IQ General</option>
@@ -221,18 +221,18 @@
                         <div class="row">
                             <div class="col-md-4 mb-3">
                                 <label for="localizacion" class="form-label">Localización</label>
-                                <select id="localizacion" class="form-select" required>
+                                <select id="localizacion" class="form-select">
                                     <option value="Urgencias">Urgencias</option>
                                     <option value="Planta">Planta</option>
                                 </select>
                             </div>
                             <div class="col-md-4 mb-3">
                                 <label for="sitio" class="form-label">Sitio (Cama/Box)</label>
-                                <input type="text" id="sitio" class="form-control" required>
+                                <input type="text" id="sitio" class="form-control">
                             </div>
                              <div class="col-md-4 mb-3">
                                 <label for="estado" class="form-label">Estado</label>
-                                <select id="estado" class="form-select" required>
+                                <select id="estado" class="form-select">
                                     <option value="Pendiente">Pendiente</option>
                                     <option value="Ingresado">Ingresado</option>
                                     <option value="Alta">Alta</option>
@@ -624,7 +624,7 @@
         document.getElementById('iq-general').textContent = iqGeneral;
       }
       
-      refreshSummaryBtn.addEventListener('click', updateSummary);
+      refreshSummaryBtn.addEventListener('click', loadPatients);
 
       changeGuardBtn.addEventListener('click', async () => {
           if (!confirm('¿Finalizar la guardia actual? Se archivarán los datos y los pacientes pendientes pasarán a la siguiente.')) return;
